--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="is">
-    <head>
-        <title>sssdas</title>
-    </head>
-    <body>
-        <p>hi</p>
-        <audio controls>
-            <source src="DR Period - Money (OFFICIAL VIDEO).mp3" type="audio/mpeg"/>
-        </audio>
-    </body>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">
+	<title>ingivilli</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head> 
+<body class="content"> 
+	<header class="header">
+		<a name="toppur"></a>
+		<img src="logo.svg" class="miðja">
+	</header>
+    <nav class="topnav">
+        <ul class="topmenu">
+			<li><a href="#greinagerð">greinagerð</a></li>
+			<li><a href="video">video</a></li>
+			<li><a href="hljoðskra">hljóðskrá</a></li>
+		</ul>
+    </nav>
+	<main class="main">
+			<hr>
+			<h1>Scarface</h1>
+			<hr>
+			<img src="scarface.jpg">
+			<a name="greinagerð"></a>
+			<p>damn it feels good to be a gangsta</p>
+			<a href="#toppur">fara aftur upp á topp</a>
+			<hr>
+			<h1>Hljóðskrá!!!!!</h1>
+			<hr>
+			<audio controls>
+				<source src="DR Period - Money (OFFICIAL VIDEO).mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+			</audio>
+			<hr>
+	</main>
+	<footer class="footer">
+	</footer>
+</body>
 </html>
