--- a/index.html
+++ b/index.html
@@ -9,33 +9,45 @@
 <body class="content"> 
 	<header class="header">
 		<a name="toppur"></a>
-		<img src="logo.svg" class="miðja">
+		<img src="myndir/logo.svg" class="miðja">
 	</header>
     <nav class="topnav">
         <ul class="topmenu">
 			<li><a href="#greinagerð">greinagerð</a></li>
-			<li><a href="video">video</a></li>
-			<li><a href="hljoðskra">hljóðskrá</a></li>
+			<li><a href="#video">video</a></li>
+			<li><a href="#hljoðskra">hljóðskrá</a></li>
 		</ul>
     </nav>
 	<main class="main">
 			<hr>
-			<h1>Scarface</h1>
+			<h1>myndir sem ég er að gera greinagerð um</h1>
 			<hr>
-			<img src="scarface.jpg">
+			<img src="myndir/scarface.jpg">
 			<a name="greinagerð"></a>
-			<p>damn it feels good to be a gangsta</p>
+			<p>þetta er góð mynd þetta er góð mynd þetta er góð mynd þetta er góð mynd mjög góð mynd.</p>
+			<img src="myndir/breakingbad.jpg">
+			<p>mjög góðir þættir</p>
+			<img src="myndir/mótorhjól.jpg">
+			<p>flott mótorhjól</p>
 			<a href="#toppur">fara aftur upp á topp</a>
 			<hr>
+			<h1>vidjó</h1>
+			<a name="video"></a>
+			<iframe class="vidjo" width="560" height="315" src="https://www.youtube.com/embed/ARJ8cAGm6JE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<a href="#toppur">fara aftur upp á topp</a>
+			<hr>
+			<a name="hljoðskra"></a>
 			<h1>Hljóðskrá!!!!!</h1>
 			<hr>
 			<audio controls>
 				<source src="DR Period - Money (OFFICIAL VIDEO).mp3" type="audio/mpeg">
-			Your browser does not support the audio element.
 			</audio>
 			<hr>
 	</main>
 	<footer class="footer">
+		<p>Ingimundur Vilberg Ingason</p>
+		<p>2020</p>
+		<iframe class="kort" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27880.610721266465!2d-21.913505403759753!3d64.10353767889467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48d674b0662759d7%3A0xe02f687c1a05c439!2sKringlan!5e0!3m2!1sen!2sis!4v1607937373575!5m2!1sen!2sis" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 	</footer>
 </body>
 </html>
